<resources>
    <string name="app_name">DataStructures</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="data_structures">Data Structures</string>
    <string name="properties">Properties</string>
    <string name="example_code">Example Code</string>
    <string name="terminologies">Terminologies</string>
    <string name="steps">Steps to perform</string>
    <string name="comp">Complexity of Operations</string>
    <string name="implementation">Implementation</string>
    <string name="ds_text"><![CDATA[A data structure is a model where data is organized, managed and stored
        in a format that enables efficient access and modification of data. <br><br>Different forms of
        data may require different types of data structures. <br><br>A program built using improper data
        structures will be therefore inefficient or unnecessarily complex. It is necessary to have
        a good knowledge of data structures and understand where to usee the best one.]]> </string>
    <string name="inbuilt_data_structures"><![CDATA[Inbuilt Data Structures]]> </string>
    <string name="adt"><![CDATA[Abstract Data Type (ADT)]]> </string>
    <string name="adt_text"><![CDATA[Abstract Data Types are defined by its behaviour from the point of view
        of the user of the data. It defines it in terms of possible values, operation on data, and
        the behaviour of these operations. <br><br>The definition of ADT only mentions what operations
        are to be performed but not how these operations will be implemented. It does not specify
        how the data is being handled under the hood, this is known as abstraction.]]> </string>
    <string name="arr_text"><![CDATA[They stores elements of same type in a contiguous block of memory,
        can accessed by a common identifier]]> </string>
    <string name="struct_txt"><![CDATA[
        They create a data type that can be used to group items of different types into a single type.
    ]]> </string>
    <string name="ll_text"><![CDATA[Consists of nodes, where each node poins to some other node forming a
        sequence.]]> </string>
    <string name="stack_text"><![CDATA[The insertion and deletion operations are performed at only one end.
        It follows the LIFO principle.]]> </string>
    <string name="queue_text"><![CDATA[The insertion and deletion operations are performed at two different
        ends. It follows the FIFO principle]]> </string>
    <string name="tree_text"><![CDATA[Hierarchical data structure where the information is represented in
        the form of a parent and children.]]> </string>
    <string name="heap_text"><![CDATA[Specialized tree-based data structure that satisfies the heap
        property.]]> </string>
    <string name="graph_text"><![CDATA[Consists of nodes and edges used to represent relation between pairs
        of objects.]]> </string>
    <string name="hash_text"><![CDATA[Data is stored in an associative manner. A hash function is used to
        map the data to array positions.]]> </string>
    <string name="ids_text"><![CDATA[Inbuilt data structures are provided by most programming languages.
        They may be used to derive other data structures.]]> </string>
    <string name="arr"><![CDATA[Array]]> </string>
    <string name="what_arr"><![CDATA[What is an array?]]> </string>
    <string name="ans_arr"><![CDATA[An array holds a fixed number of similar elements that are stored under
        one name. These elements are stored in contagious memory locations.
        <br><br>Most modern programming languages have arrays built-in by default.]]> </string>
    <string name="why_arr"><![CDATA[Why use arrays over variables?]]> </string>
    <string name="ans_why_arr"><![CDATA[Consider a case where we have to store the marks of all students in
        an university. <br><br>We could do this without using arrays (using variables), but considering
        the large number of students, we would have to declare a large number variables and then
        access each of them separately. This is extremely tedious. <br><br>In these cases, an array is
        preferred as it can hold the same type of data (here, marks of the type integer). Every
        student\'s marks can be accessed by iterating through the indices of the array.
    ]]> </string>
    <string name="arr_prop"><![CDATA[1. An array is a data type which can store multiple values of same data type
        at a time.
        <br>2. The items are stored in continuous memory locations with a single
        name.
        <br>3. Arrays cannot be resized dynamically. This may cause memory assigned to
        be wasted or insufficient.
        <br>4. The access time of each element is constant, that is O(1).]]> </string>
    <string name="acc_arr"><![CDATA[Access <br>O(1)]]> </string>
    <string name="search_arr"><![CDATA[Search <br>O(n)]]> </string>
    <string name="insertion_arr"><![CDATA[Insertion <br>O(n)]]> </string>
    <string name="del_arr"><![CDATA[Deletion <br>O(n)]]> </string>
    <string name="space_arr"><![CDATA[Space <br>O(n)]]> </string>
    <string name="declaring_arr"><![CDATA[Declaring an Array]]> </string>
    <string name="declaring_ans_arr"><![CDATA[An array must be declared before it can be used. Declaring an
        array involves specifying the following:<br><br>

        1. data type: the kind of values it can store, e.g, int, char, float<br>
        2. name: used to identify the array<br>
        3. size: maximum number of values the array can store<br><br>

        The syntax for declaring an array is as follows:]]> </string>
    <string name="arr_syn_1"><![CDATA[type name[size];]]> </string>
    <string name="calc_arr"><![CDATA[Calculating the Address of Array Elements]]> </string>
    <string name="calc_txt"><![CDATA[Since an array stores all its data elements in consecutive memory
        locations, storing just the base address, that is, the address of the first element in the
        array, is sufficient.

        <br><br>The address of other data elements can be then calculated using the base address.
        A simple formula can be used: ]]> </string>
    <string name="arr_syn_2"><![CDATA[A[k] = base_address(A) + size_of_element(k – lower_bound)]]> </string>
    <string name="mda"><![CDATA[Multidimensional Arrays]]> </string>
    <string name="mda_txt"><![CDATA[Multidimensional arrays can be defined in simple words as array of
        arrays.<br><br>

        Data in a two-dimensional array, for example, can be visualised as a table.<br><br>

        Each element in a multidimensional array can be accessed by specifying one or
        more indices.]]> </string>
    <string name="dec_2d_arr"><![CDATA[Declaring a 2D Array]]> </string>
    <string name="dec_txt_2d"><![CDATA[A 2D array can be declared using the following syntax:]]> </string>
    <string name="arr_syn_3"><![CDATA[type name[row_size][column_size]]]> </string>
    <string name="acc_2d"><![CDATA[Accessing 2D Arrays]]> </string>
    <string name="acc_2d_txt"><![CDATA[A specific element in a 2D array could be accessed by defining the
        row and column number of the element to be accessed:]]> </string>
    <string name="arr_syn_4"><![CDATA[type name[row_number][column_number]]]> </string>
    <string name="rep_2d_mem"><![CDATA[Representation of 2D arrays in memory]]> </string>
    <string name="rep_2d_txt"><![CDATA[In memory, a 2D array is always stored sequentially.
        There are two ways of storing a two-dimensional array.<br><br>

        The memory location of each element in the array could be found out by using the respective
        formulas for both these methods.
    ]]> </string>
    <string name="rmf"><![CDATA[Row Major Form]]> </string>
    <string name="rmf_txt"><![CDATA[In the row major form, the elements are stored row by row. The \'n\'
        elements of the first row are stored in the first \'n\' locations, elements of the second
        row elements are stored in the next \'n\' locations, and so on.
    ]]> </string>
    <string name="arr_syn_5"><![CDATA[Address(A[I][J]) = base_address + width {number_of_cols (I – 1) + (J – 1)}]]> </string>
    <string name="cmf"><![CDATA[Column Major Form]]> </string>
    <string name="cmf_txt"><![CDATA[In the column major form, the elements are stored column by column.
        The \'m\' elements of the first column are stored in the first \'m\' locations, elements
        of the second column element are stored in the next \'m\' locations, and so on.
    ]]> </string>
    <string name="arr_syn_6"><![CDATA[Address(A[I][J]) = base_address + width {number_of_rows (J – 1) + (I – 1)}]]> </string>
    <string name="sm"><![CDATA[Sparse Matrix]]> </string>
    <string name="sm_txt"><![CDATA[A matrix is known as a sparse matrix when it contains more ZERO values
        than NON-ZERO values. Sparse matrices are used generally because of 2 advantages they
        offer:<br><br>

        1. Save Space: by storing only the NON-ZERO elements
        <br>2. Save Computing Time: by storing the elements in way that is efficient for access.
    ]]> </string>
    <string name="rep_sm"><![CDATA[Representation of Sparse Matrix]]> </string>
    <string name="rep_sm_txt"><![CDATA[Sparse Matrices can be represented in more efficient representations
        by using the Triplet Representation or Linked Representation]]> </string>
    <string name="triplet_arr"><![CDATA[Array Triplet Representation]]> </string>
    <string name="triplet_arr_txt"><![CDATA[In this representation, only the NON-ZERO values are stored
        along with their row and column positions in the table. The triplet refers to the 
        collection of the row, column and the value.<br><br>
        
        The size of the matrix and also the number of NON-ZERO elements are also counted. This is 
        stored in the first field in the array of triplets.
    ]]> </string>
    <string name="l_rep"><![CDATA[Linked Representation]]> </string>
    <string name="l_rep_txt"><![CDATA[A linked list may be used to store a sparse matrix by representing
        each NON-ZERO value as a node and linking this Node in a specific way such that it 
        represents the position in the original array.<br><br>
        Each node in the linked list has four fields corresponding to the row, column, value and 
        pointer to the next node.
    ]]> </string>
    <string name="arr_op"><![CDATA[Array Operations]]> </string>
    <string name="arr_op_txt"><![CDATA[There are 3 basic operations that can be performed in arrays:<br><br>
        1. Deletion: for deleting an existing element.<br>
        2. Insertion: for adding a new element.<br>
        3. Access: for accessing an existing element.
    ]]> </string>
    <string name="arr_op_read"><![CDATA[Read about Insertion, Deletion and Access]]> </string>
    <string name="algo_arr"><![CDATA[Algorithms in Arrays]]> </string>
    <string name="algo_arr_txt"><![CDATA[Various searching and sorting algorithms could be
        performed in arrays.]]> </string>
    <string name="searching_arr"><![CDATA[Searching]]> </string>
    <string name="ser_arr_txt"><![CDATA[Linear and Binary search.]]> </string>
    <string name="sorting_arr"><![CDATA[Sorting]]> </string>
</resources>